--- a/bsip/bsip/Base.lproj/Main.storyboard
+++ b/bsip/bsip/Base.lproj/Main.storyboard
@@ -21,6 +21,9 @@
                                 <rect key="frame" x="114" y="213" width="125" height="35"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Start Camera"/>
+                                <connections>
+                                    <action selector="startVideoAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="N2b-MH-F3A"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
