--- a/bsip/bsip/Base.lproj/Main.storyboard
+++ b/bsip/bsip/Base.lproj/Main.storyboard
@@ -9,6 +9,22 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Audio Test View Controller-->
+        <scene sceneID="i4v-8f-e92">
+            <objects>
+                <viewController id="NK9-TE-rMb" customClass="AudioTestViewController" customModule="bsip" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="MMI-Kv-w7O">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="70G-Pz-huG"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="z0p-oX-UPX"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MQh-Gl-PQ9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1764" y="-725"/>
+        </scene>
         <!--Audio View Controller-->
         <scene sceneID="e2N-r1-SfM">
             <objects>
@@ -230,6 +246,7 @@
                     <connections>
                         <segue destination="g1D-p2-22m" kind="relationship" relationship="viewControllers" id="2n4-pK-2oT"/>
                         <segue destination="Pcy-qb-0YD" kind="relationship" relationship="viewControllers" id="WIY-NF-36P"/>
+                        <segue destination="lfy-37-Dwo" kind="relationship" relationship="viewControllers" id="VPU-D2-Avf"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9ET-Ah-JbJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -254,6 +271,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="B4l-sv-5ry" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="837" y="-43"/>
+        </scene>
+        <!--Test-->
+        <scene sceneID="KHu-fu-pOD">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="lfy-37-Dwo" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Test" id="pjR-Yl-qWw"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="thU-N4-zYz">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="NK9-TE-rMb" kind="relationship" relationship="rootViewController" id="Vge-hU-1bI"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="y1x-1G-iCt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="837" y="-725"/>
         </scene>
     </scenes>
     <resources>
